3rd theme push 17:59 09282025

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Emily Ringle</span><!--first edit at 17:34 on 09/28/2025, as I didn't immediately find the title element-->
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
-            </a>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile image.jpg" alt="Emily Ringle profile picture semi casual taken in car" /></span>
+            </a><!--my personal alt test added to my personal photo, I hope it is appropriate-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
@@ -102,18 +102,21 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Denver</h3>
+                            <div class="subheading mb-3">Master Library Information Science</div>
+                            <div>Archives Concentration</div>
+                            <!-- removed the GPA as it typically is not necessary for employers, edited out 17:51; 9/28/2025 <p>GPA: 3.23</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                    </div>
+                    <div class="flex-grow-1">
+                        <h3 class=""
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">James Buchanan High School</h3>
                             <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <!-- same as before, GPA is not typically necessary in my opinion, edited 17:52, 9/28/2025 <p>GPA: 3.56</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
