--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Emily Ringle</title><!--I think this is the correct element per the assignment instructions. Edited at 17:38 on 9/28/2025    -->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon (2).ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -31,7 +31,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                </ul>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#videos">Video</a></li>
+                </ul
             </div>
         </nav>
         <!-- Page Content-->
@@ -231,7 +232,7 @@
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="Presentations and Awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Conference Presentations and Awards</h2>
                     <ul class="fa-ul mb-0">
@@ -274,6 +275,18 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li> -->
                     </ul>
+                </div>
+            </section>
+
+               <hr class="m-0" />
+            <!-- Videos-->
+            <section class="resume-section" id="videos">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Videos</h2>
+            <!--YouTube Embed Code Added Here  -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nuwsdVt8SfE?si=4QnBqTK-lnuhpicD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmdD4cWW4G4?si=NghKVsvYZP1eWM0t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
         </div>
