--- a/index.html
+++ b/index.html
@@ -142,8 +142,6 @@
                         <div class="flex-shrink-0"><span class="text-primary">Winter 2025 - Present</span></div>
                     </div>
                     <div class="flex-grow-1">
-                        <h3 class=""
-                    </div>
                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Colorado Denver</h3>
@@ -153,8 +151,6 @@
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2010 - May 2014</span></div>
                     </div>
                     <div class="flex-grow-1">
-                        <h3 class=""
-                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Iowa State University</h3>
@@ -164,8 +160,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">August 2004 - May 2009</span></div>
                     </div>
                     <div class="flex-grow-1">
-                        <h3 class=""
-                    </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Mile High Academy</h3>
@@ -175,8 +170,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">August 2000 - May 2004</span></div>
                     </div>
                     <div class="flex-grow-1">
-                        <h3 class=""
-                </div>
+                        <h3 class=""</div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
@@ -283,8 +277,13 @@
             <section class="resume-section" id="videos">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Videos</h2>
+                    <h3 class="title">The Importance of Digital Archiving</h3>
+                    <h4 class="title">Assignment for LIS4000</h4>
             <!--YouTube Embed Code Added Here  -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/nuwsdVt8SfE?si=4QnBqTK-lnuhpicD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <br>
+            <h3 class="title">"What's In Your Wallet? Digital Section</h3>
+            <h4 class="title">Part of Presentation for Student Conference</h4>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmdD4cWW4G4?si=NghKVsvYZP1eWM0t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
